<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

   <EditText
        android:id="@+id/stockSymbol_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button_go"
        android:ems="10" />
   
       <Button
        android:id="@+id/button_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/stockSymbol_editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/default_GO" />

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/stockSymbol_editText"
        android:text="@string/default_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

   <TextView
        android:id="@+id/symbol_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/name_textView"
        android:text="@string/default_symbol"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/price_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/symbol_textView"
        android:text="@string/default_price"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/volume_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/price_textView"
        android:text="@string/default_volume"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>